--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="column"></div>
         <div class="column text-center">
-            <svg id="svg" style="width:300px; height:530px"></svg>
+            <svg id="svg"></svg>
         </div>
         <div class="column"></div>
       </div>
