--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     // Paper
     var paper = Snap("#svg");
 
-    paper.append(Snap.parse(glas).innerSVG())
+    paper.append(Snap.parse(glas))
     
     $(document).ready(function(){
         $("#download").on("click", function(){
