--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
     <script type="text/javascript" charset="utf-8">
     // Paper
     var paper = Snap("#svg");
+	
+    var glas_svg = Snap.parse(glas);
 
-    paper.append(Snap.parse(glas))
+	console.log(glas_svg);
+	console.log(glas_svg.innerSVG());
+
+    paper.append(glas_svg)
     
     $(document).ready(function(){
         $("#download").on("click", function(){
