--- a/index.html
+++ b/index.html
@@ -39,15 +39,8 @@
     <script type="text/javascript" charset="utf-8">
     // Paper
     var paper = Snap("#svg");
-	/*
-    var glas_svg = Snap.parse(glas);
-
-	console.log(glas_svg);
-	console.log(glas_svg.innerSVG());
-
-    paper.append(glas_svg)
-    */
-    Snap.load("./glas.svg", function(data){
+	
+    Snap.load("./svg/glas.svg", function(data){
     	paper.append(data);
     });
     
