--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         });
         
         $("#color").on("click", function(){
-            console.log(glas);
+            glas.attr({fill:"#000000"});
         });
     });
 
