--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         });
         
         $("#color").on("click", function(){
-            console.log(paper.select("#glas_svg"));
+            paper.select("#glas_svg").attr({fill:"#FFFFFF"});
         });
     });
 
