--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
       </div>
 
       <div class="row">
-        <div class="column"></div>
+        <div class="column">
+        	<form id="button_options">
+        		<fieldset>
+        		<caption>Tasteroptionen</caption>
+        		<div>
+			      	<input type="radio" id="white" name="color">
+			      	<label class="label-inline" for="white">Weiß</label>
+			      	<input type="radio" id="black" name="color">
+			      	<label class="label-inline" for="black">Schwarz</label>
+			    </div>
+			    </fieldset>
+        	</form>
+        </div>
         <div class="column text-center">
             <svg id="svg"></svg>
         </div>
