--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             download(paper.outerSVG(), "MDT-Glastaster.svg", "image/svg+xml");
         });
         $("input[name=color]:radio").change(function () {
-            paper.select("#glas_svg").attr({fill:$(this).val();});
+            paper.select("#glas_svg").attr({fill:$(this).val()});
         });
     });
 
