--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         
         $("input[name=size]:radio").change(function () {
 		    Snap.load("./svg/glas-" + $(this).val() + ".svg", function(data){
-		    	paper.remove("#glas_svg").append(data);
+		    	paper.remove("#glas_svg");
+		    	paper.append(data);
 		    });
             paper.select("#glas_svg").attr({ fill : $("input[name=color]:checked").val() });
         });
