--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         $("input[name=size]:radio").change(function () {
 		    Snap.load("./svg/glas-" + $(this).val() + ".svg", function(data){
 		    	paper.remove("#glas_svg");
-		    	paper.append(data);
+		    	//paper.append(data);
 		    });
             paper.select("#glas_svg").attr({ fill : $("input[name=color]:checked").val() });
         });
