--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         
         $("input[name=size]:radio").change(function () {
 		    Snap.load("./svg/glas-" + $(this).val() + ".svg", function(data){
-		    	paper.remove("svg#svg2");
-		    	//paper.append(data);
+		    	paper.select("svg#svg2").remove();
+		    	paper.append(data);
 		    });
             paper.select("#glas_svg").attr({ fill : $("input[name=color]:checked").val() });
         });
